<resources>
    <string name="app_name">Gotur</string>
    <string name="giris">Giriş</string>
    <string name="yemek_ekle">Yemek Ekle</string>
    <string name="google_maps_key">AIzaSyAaVA19CxJZ41fEdkoYxln2u4RWyP5_PjY</string>
    <string name="uyari">Uyarı</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="tamam">Tamam</string>
    <string name="action_settings">Settings</string>
    <string name="kullanici_adi">Kullanıcı Adı</string>
    <string name="yemek_bilgileri">Yemek Bilgileri</string>
    <string name="resim_ekle">Resim Ekle</string>
    <string name="yemek">Yemek</string>
    <string name="seciniz">Seçiniz</string>
    <string name="giriniz">Giriniz</string>
    <string name="ekle">Ekle</string>
    <string name="stok">Stok</string>
    <string name="fiyat">Fiyat</string>
    <string name="icindekiler">İçindekiler</string>
    <string name="giris_yap">Giriş Yap</string>
    <string name="siparis">Sipariş</string>
    <string name="siparis_miktari">Sipariş  Miktarı</string>
    <string name="siparis_mesaj">Sipariş Mesaj</string>
    <string name="vazgec">Vazgeç</string>
    <string name="siparis_ver">Siparş Ver</string>
    <string name="onayla">Onayla</string>
</resources>
