<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Giris.GirisActivity"
    android:background="@color/gri200">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/btn_giris_yap">

        <!-- Başlık -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/kullanici_adi"
            android:textColor="@color/gri700"
            android:background="@color/baslik_bg"
            android:textStyle="bold"
            android:padding="12dp"/>


        <EditText
            android:id="@+id/et_chip_ekle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/btn_chip_ekle"
            android:maxLines="1"
            android:maxLength="50"
            android:hint="@string/giriniz"
            android:layout_margin="12dp"/>

        <fragment
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>


    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btn_giris_yap"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_edittext"
        android:text="@string/giris_yap"
        android:textColor="@color/gri900"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginBottom="12dp"/>


</RelativeLayout>